--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,166 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="en">
 <head>
-    <title>Test project</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/index.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="button.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <title>Document</title>
 </head>
-<body class="page__body">
-    <h1 class="page__logo logo">
-        Test
-    </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <picture>
-        <source srcset="https://itmo.ru/file/stat/482/slogans05.png" media="(min-width: 1063px)">
-            <img src="https://itmo.ru/file/pages/213/logo-mail.PNG" alt="Логотип ИТМО">
-    </picture>
+<body>
+    <div class="header">
+        <div class="header__section page__margin">
+            <div class="header__icon">
+                <span>NewsExplorer</span>
+            </div>
+        </div>
+        <div class="header__section header__padding_1">
+            <div class="header__item header__padding_2">
+                <a href="#" class="header__hover">Главная</a>
+            </div>
+            <div class="header__item header__padding_3">
+                <a href="#" class="header__hover">Сохраненные статьи</a>
+            </div>
+            <div class="header__item header__padding_4">
+                <a href="#" class="button14">
+                    <span>Грета</span>
+                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6 2L2 2L2 14H6V16H2C0.89543 16 0 15.1046 0 14V2C0 0.89543 0.895432 0 2 0H6V2ZM13.5856 9.00002L9.29274 13.1339L10.707 14.4958L17.4141 8.03706L10.707 1.57837L9.29274 2.9402L13.5856 7.0741H4V9.00002H13.5856Z" fill="#1A1B22"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="content__header page__margin">
+            <h1>Сохранённые статьи</h1>
+            <h2>Грета, у вас 5 <br/> сохранённых статей</h2>
+            <h3>По ключевым словам: <strong>Природа</strong>, <strong>Тайга</strong> и <strong>2-м другим</strong></h3>
+        </div>
+
+        <div class="content__main">
+            <div class="cards page__margin">
+                <div class="card">
+                    <div class="card__header" style="background-image: url(1.png);">
+                        <div class="card__category">
+                            Природа
+                        </div>
+                        <div class="card__delete_icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15 3H9V5H3V7H21V5H15V3ZM5 9V20C5 21.1046 5.89543 22 7 22H17C18.1046 22 19 21.1046 19 20V9H17V20H7V9H5ZM9 9L9 18H11L11 9H9ZM13 9V18H15V9H13Z" fill="#B6BCBF"/>
+                            </svg>                                                        
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <div class="date">2 августа, 2019</div>
+                        <div class="card__postname"><a href="#">Национальное достояние – парки</a></div>
+                        <div class="card__postinfo"><p>В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p></div>
+                        <div class="resource"><a href="#">ДЗЕН</a></div>
+                    </div>
+                </div>
+    
+                <div class="card">
+                    <div class="card__header" style="background-image: url(2.png);">
+                        <div class="card__category">
+                            Природа
+                        </div>
+                        <div class="card__delete_icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15 3H9V5H3V7H21V5H15V3ZM5 9V20C5 21.1046 5.89543 22 7 22H17C18.1046 22 19 21.1046 19 20V9H17V20H7V9H5ZM9 9L9 18H11L11 9H9ZM13 9V18H15V9H13Z" fill="#B6BCBF"/>
+                            </svg>                                                        
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <div class="date">2 августа, 2019</div>
+                        <div class="card__postname"><a href="#">Лесные огоньки: история одной фотографии</a></div>
+                        <div class="card__postinfo"><p>Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p></div>
+                        <div class="resource"><a href="#">Афиша</a></div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__header" style="background-image: url(3.png);">
+                        <div class="card__category">
+                            Тайга
+                        </div>
+                        <div class="card__delete_icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15 3H9V5H3V7H21V5H15V3ZM5 9V20C5 21.1046 5.89543 22 7 22H17C18.1046 22 19 21.1046 19 20V9H17V20H7V9H5ZM9 9L9 18H11L11 9H9ZM13 9V18H15V9H13Z" fill="#B6BCBF"/>
+                            </svg>                                                        
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <div class="date">2 августа, 2019</div>
+                        <div class="card__postname"><a href="#">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</a></div>
+                        <div class="card__postinfo"><p>Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p></div>
+                        <div class="resource"><a href="#">Медиазона</a></div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__header" style="background-image: url(1.png);">
+                        <div class="card__category">
+                            Парки
+                        </div>
+                        <div class="card__delete_icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15 3H9V5H3V7H21V5H15V3ZM5 9V20C5 21.1046 5.89543 22 7 22H17C18.1046 22 19 21.1046 19 20V9H17V20H7V9H5ZM9 9L9 18H11L11 9H9ZM13 9V18H15V9H13Z" fill="#B6BCBF"/>
+                            </svg>                                                        
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <div class="date">2 августа, 2019</div>
+                        <div class="card__postname"><a href="#">Национальное достояние – парки</a></div>
+                        <div class="card__postinfo"><p>В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p></div>
+                        <div class="resource"><a href="#">Дзен</a></div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__header" style="background-image: url(2.png);">
+                        <div class="card__category">
+                            Фотография
+                        </div>
+                        <div class="card__delete_icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15 3H9V5H3V7H21V5H15V3ZM5 9V20C5 21.1046 5.89543 22 7 22H17C18.1046 22 19 21.1046 19 20V9H17V20H7V9H5ZM9 9L9 18H11L11 9H9ZM13 9V18H15V9H13Z" fill="#B6BCBF"/>
+                            </svg>                                                        
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <div class="date">2 августа, 2019</div>
+                        <div class="card__postname"><a href="#">Лесные огоньки: история одной фотографии</a></div>
+                        <div class="card__postinfo"><p>Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного 
+                            из местных чудес природы.</p></div>
+                        <div class="resource"><a href="#">Афиша</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer__section page__margin">
+            <span>© 2020 Supersite, Powered by News API</span>
+        </div>
+
+        <div class="footer__section" style="margin-left: 550px;">
+            <a href="#">Главная</a>
+            <a href="#" style="margin-left: 35px;">Яндекс.Практикум</a>
+        </div>
+
+        <div class="footer__section" style="margin-left: 58px;">
+            <svg width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M11 0.894745C5.41702 0.894745 0.894775 5.42319 0.894775 11C0.894775 15.4664 3.79174 19.2505 7.80531 20.5904C8.30778 20.6834 8.49388 20.3733 8.49388 20.1003C8.49388 19.8584 8.48768 19.2257 8.48148 18.382C5.67136 18.9899 5.07584 17.0297 5.07584 17.0297C4.61679 15.8634 3.95303 15.5533 3.95303 15.5533C3.03493 14.9267 4.02127 14.9391 4.02127 14.9391C5.03241 15.0136 5.5721 15.9813 5.5721 15.9813C6.47159 17.5259 7.93558 17.0793 8.51249 16.8188C8.60554 16.1674 8.86608 15.7208 9.15144 15.4664C6.90582 15.2121 4.54855 14.3436 4.54855 10.4727C4.54855 9.36853 4.93936 8.46904 5.59071 7.76186C5.48526 7.50752 5.13787 6.47776 5.68997 5.08821C5.68997 5.08821 6.53983 4.81527 8.46907 6.12417C9.27551 5.90085 10.1378 5.78919 11 5.78299C11.8561 5.78919 12.7246 5.90085 13.531 6.12417C15.4602 4.81527 16.3101 5.08821 16.3101 5.08821C16.8622 6.47776 16.5148 7.50752 16.4094 7.76186C17.0545 8.46904 17.4453 9.36853 17.4453 10.4727C17.4453 14.356 15.0818 15.2059 12.83 15.4602C13.1898 15.7704 13.5186 16.3907 13.5186 17.3336C13.5186 18.686 13.5062 19.7715 13.5062 20.1065C13.5062 20.3795 13.6861 20.6896 14.201 20.5904C18.2145 19.2505 21.1053 15.4664 21.1053 11.0062C21.1053 5.42319 16.5831 0.894745 11 0.894745Z" fill="#191717"/>
+            </svg>
+            <svg style="margin-left: 22px;" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18.8958 0H1.10417C0.494167 0 0 0.494167 0 1.10417V18.8967C0 19.5058 0.494167 20 1.10417 20H10.6833V12.255H8.07667V9.23667H10.6833V7.01083C10.6833 4.4275 12.2608 3.02083 14.5658 3.02083C15.67 3.02083 16.6183 3.10333 16.895 3.14V5.84L15.2967 5.84083C14.0433 5.84083 13.8008 6.43667 13.8008 7.31V9.2375H16.79L16.4008 12.2558H13.8008V20H18.8975C19.5058 20 20 19.5058 20 18.8958V1.10417C20 0.494167 19.5058 0 18.8958 0V0Z" fill="black"/>
+            </svg>                   
+        </div>
+    </div>
 </body>
 </html>
