изменяет структуру папок, разбивает css по отдельным файлам

--- a/src/flexbox/index.html
+++ b/src/flexbox/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>Document</title>
@@ -45,7 +44,7 @@
         <div class="content__main">
             <div class="cards page__margin">
                 <div class="card">
-                    <div class="card__header" style="background-image: url(1.png);">
+                    <div class="card__header" style="background-image: url(images/1.png);">
                         <div class="card__category">
                             Природа
                         </div>
@@ -64,7 +63,7 @@
                 </div>
     
                 <div class="card">
-                    <div class="card__header" style="background-image: url(2.png);">
+                    <div class="card__header" style="background-image: url(images/2.png);">
                         <div class="card__category">
                             Природа
                         </div>
@@ -83,7 +82,7 @@
                 </div>
 
                 <div class="card">
-                    <div class="card__header" style="background-image: url(3.png);">
+                    <div class="card__header" style="background-image: url(images/3.png);">
                         <div class="card__category">
                             Тайга
                         </div>
@@ -102,7 +101,7 @@
                 </div>
 
                 <div class="card">
-                    <div class="card__header" style="background-image: url(1.png);">
+                    <div class="card__header" style="background-image: url(images/1.png);">
                         <div class="card__category">
                             Парки
                         </div>
@@ -121,7 +120,7 @@
                 </div>
 
                 <div class="card">
-                    <div class="card__header" style="background-image: url(2.png);">
+                    <div class="card__header" style="background-image: url(images/2.png);">
                         <div class="card__category">
                             Фотография
                         </div>
