выносит картинки в отдельную папку

--- a/src/flexbox/index.html
+++ b/src/flexbox/index.html
@@ -45,7 +45,7 @@
 
         <div class="fixed-container card-container">
             <div class="card">
-                <div class="card__header" style="background-image: url(images/1.png);">
+                <div class="card__header" style="background-image: url(../images/1.png);">
                     <div class="card__category">
                         Природа
                     </div>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="card">
-                <div class="card__header" style="background-image: url(images/2.png);">
+                <div class="card__header" style="background-image: url(../images/2.png);">
                     <div class="card__category">
                         Природа
                     </div>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="card">
-                <div class="card__header" style="background-image: url(images/3.png);">
+                <div class="card__header" style="background-image: url(../images/3.png);">
                     <div class="card__category">
                         Тайга
                     </div>
@@ -119,7 +119,7 @@
             </div>
 
             <div class="card">
-                <div class="card__header" style="background-image: url(images/1.png);">
+                <div class="card__header" style="background-image: url(../images/1.png);">
                     <div class="card__category">
                         Парки
                     </div>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="card">
-                <div class="card__header" style="background-image: url(images/2.png);">
+                <div class="card__header" style="background-image: url(../images/2.png);">
                     <div class="card__category">
                         Фотография
                     </div>
